hphp/test/slow/sealed/sealed_classes13.php.expectf
Fatal error: Class undefined: SomeInterface2 in %s/test/slow/sealed/sealed_classes13.php on line 16
